# cfp-generator

./: AGENTS.md  README.md  app.py  cfp_generator.py  cfp_ideas_bri.txt  pyproject.toml  test_cfp_generator.py
