[project]
name = "cfp-generator"
version = "0.1.0"
description = "Generate novel talk/workshop ideas for conference CFP submissions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cfp-generator = "cfp_generator:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
